--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -138,7 +138,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Notificaciones"
+                    android:text="Notificacions"
                     android:textSize="16sp"
                     android:textColor="@color/black"
                     android:layout_marginStart="16dp" />
@@ -165,7 +165,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Acerca de"
+                    android:text="Acerca de nosaltres"
                     android:textSize="16sp"
                     android:textColor="@color/black"
                     android:layout_marginStart="16dp" />
