--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,145 +8,84 @@
     android:background="@color/background_app"
     tools:context=".MainActivity">
 
-    <ImageButton
-        android:id="@+id/menu_button"
-
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/baseline_menu_24"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-
-        android:background="@color/transparent"
-        app:tint="@color/white"
-        />
-
-    <ImageButton
-        android:id="@+id/create_note"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-
-        android:src="@drawable/baseline_add_24"
-
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-
-        android:background="@color/transparent"
-        app:tint="@color/white"
-        />
-
-    <ImageButton
-        android:id="@+id/bin"
-
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-
-        android:src="@drawable/baseline_delete_24"
-
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-
-        android:background="@color/transparent"
-
-        app:tint="@color/white"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/background_component"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        app:labelVisibilityMode="labeled"
+        app:itemHorizontalTranslationEnabled="true"
+        app:menu="@menu/bottom_navigation_menu"/>
 
     <ImageView
         android:layout_width="200dp"
         android:layout_height="40dp"
-
         android:gravity="center"
-
         android:src="@drawable/notekeeper"
-
         android:layout_marginTop="40dp"
         android:layout_marginLeft="40dp"
-
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <EditText
         android:id="@+id/search"
-
         android:layout_width="300dp"
         android:layout_height="40dp"
-
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
-
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         android:hint="   Busca..."
-
         android:layout_marginTop="80dp"
-
         />
 
     <ImageButton
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/baseline_search_24"
-
         app:layout_constraintRight_toRightOf="@id/search"
         app:layout_constraintTop_toTopOf="@id/search"
-
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-
         android:background="@color/transparent"
         app:tint="@color/black"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:visibility="gone"
-
         android:layout_height="500dp"
         android:layout_width="300dp"
-
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-
         app:layout_constraintTop_toBottomOf="@+id/search"
-
         android:layout_marginTop="30dp">
 
-    <!--
-        El ScrollView i LinearLayout d'abaix són placeholders ja que a RecyclerView
-        s'afegeixen els elements de forma programatica.
-    -->
+        <!--
+            El ScrollView i LinearLayout d'abaix són placeholders ja que a RecyclerView
+            s'afegeixen els elements de forma programatica.
+        -->
 
 
     </androidx.recyclerview.widget.RecyclerView>
     <ScrollView
         android:layout_height="500dp"
         android:layout_width="300dp"
-
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-
         app:layout_constraintTop_toBottomOf="@+id/search"
-
         android:layout_marginTop="30dp">
 
         <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-
             android:orientation="vertical"
-
             android:layout_marginTop="10dp">
 
 
@@ -176,24 +115,14 @@
                     />
 
                 <ImageButton
-
-
-
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-
                     android:layout_marginLeft="268dp"
-
                     android:background="@color/transparent"
-
                     android:src="@drawable/baseline_more_horiz_24"
-
-
                     app:tint="@color/black" />
-
 
             </androidx.cardview.widget.CardView>
 
@@ -204,9 +133,7 @@
         android:id="@+id/menu"
         android:layout_width="-300dp"
         android:layout_height="match_parent"
-
         android:backgroundTint="@color/background_component"
-
         app:layout_constraintLeft_toLeftOf="parent">
 
         <LinearLayout
@@ -214,102 +141,48 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/menu_close_button"
-
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@drawable/baseline_menu_24"
-
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp"
-
-                android:background="@color/transparent"
-                app:tint="@color/white"
-                />
-
-            <ImageView
-                android:layout_width="240dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="20dp"
-
-                android:layout_marginTop="16dp"
-                android:background="@color/transparent"
-
-                android:src="@drawable/notekeeper"
-                app:layout_constraintLeft_toLeftOf="parent"
-
-                app:layout_constraintTop_toTopOf="parent"
-                />
 
             <Button
                 android:id="@+id/schedule"
-
                 android:layout_width="match_parent"
-
                 android:textAlignment="textStart"
-
                 android:layout_height="45dp"
-
                 android:text="· Agenda"
                 android:textSize="18dp"
-
                 android:textColor="@color/white"
-
                 android:background="@color/transparent"
                 />
 
             <Button
                 android:id="@+id/share"
-
                 android:layout_width="match_parent"
-
                 android:textAlignment="textStart"
-
                 android:layout_height="45dp"
-
                 android:text="· Compartir"
                 android:textSize="18dp"
-
                 android:textColor="@color/white"
-
                 android:background="@color/transparent"
                 />
 
             <Button
                 android:id="@+id/profile"
-
                 android:layout_width="match_parent"
-
                 android:textAlignment="textStart"
-
                 android:layout_height="45dp"
-
                 android:text="· Perfil"
                 android:textSize="18dp"
-
                 android:textColor="@color/white"
-
                 android:background="@color/transparent"
                 />
 
             <Button
                 android:id="@+id/configuration"
-
                 android:layout_width="match_parent"
-
                 android:textAlignment="textStart"
-
                 android:layout_height="45dp"
-
                 android:text="· Configuració"
                 android:textSize="18dp"
-
                 android:textColor="@color/white"
-
                 android:background="@color/transparent"
                 />
         </LinearLayout>
