--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginLeft="40dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
         android:id="@+id/search"
@@ -43,8 +42,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:hint="   Busca..."
-        android:layout_marginTop="80dp"
-        />
+        android:layout_marginTop="80dp"/>
 
     <ImageButton
         android:layout_width="32dp"
@@ -55,8 +53,7 @@
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
         android:background="@color/transparent"
-        app:tint="@color/black"
-        />
+        app:tint="@color/black"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:visibility="gone"
@@ -66,14 +63,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search"
         android:layout_marginTop="30dp">
-
-    <!--
-        El ScrollView i LinearLayout d'abaix són placeholders ja que a RecyclerView
-        s'afegeixen els elements de forma programatica.
-    -->
-
-
     </androidx.recyclerview.widget.RecyclerView>
+
     <ScrollView
         android:layout_height="500dp"
         android:layout_width="300dp"
@@ -88,8 +79,6 @@
             android:orientation="vertical"
             android:layout_marginTop="10dp">
 
-
-
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
@@ -101,8 +90,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:textSize="16dp"
-                    android:text="Nom de la nota (PLACEHOLDER)"
-                    />
+                    android:text="Nom de la nota (PLACEHOLDER)"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -111,82 +99,18 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:textSize="13dp"
-                    android:text="Text de la nota, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-                    />
+                    android:text="Text de la nota, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."/>
 
                 <ImageButton
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginLeft="268dp"
                     android:background="@color/transparent"
                     android:src="@drawable/baseline_more_horiz_24"
-                    app:tint="@color/black" />
-
+                    app:tint="@color/black"/>
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
     </ScrollView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/menu"
-        android:layout_width="-300dp"
-        android:layout_height="match_parent"
-        android:backgroundTint="@color/background_component"
-        app:layout_constraintLeft_toLeftOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-
-            <Button
-                android:id="@+id/schedule"
-                android:layout_width="match_parent"
-                android:textAlignment="textStart"
-                android:layout_height="45dp"
-                android:text="· Agenda"
-                android:textSize="18dp"
-                android:textColor="@color/white"
-                android:background="@color/transparent"
-                />
-
-            <Button
-                android:id="@+id/share"
-                android:layout_width="match_parent"
-                android:textAlignment="textStart"
-                android:layout_height="45dp"
-                android:text="· Compartir"
-                android:textSize="18dp"
-                android:textColor="@color/white"
-                android:background="@color/transparent"
-                />
-
-            <Button
-                android:id="@+id/profile"
-                android:layout_width="match_parent"
-                android:textAlignment="textStart"
-                android:layout_height="45dp"
-                android:text="· Perfil"
-                android:textSize="18dp"
-                android:textColor="@color/white"
-                android:background="@color/transparent"
-                />
-
-            <Button
-                android:id="@+id/configuration"
-                android:layout_width="match_parent"
-                android:textAlignment="textStart"
-                android:layout_height="45dp"
-                android:text="· Configuració"
-                android:textSize="18dp"
-                android:textColor="@color/white"
-                android:background="@color/transparent"
-                />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
