--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,11 @@
     </style>
 
     <style name="Theme.NoteKeeper" parent="Base.Theme.NoteKeeper" />
+
+    <style name="SplashTheme" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/background_app</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/notekeeper</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.NoteKeeper</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+    </style>
 </resources>
