--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -42,62 +42,14 @@
         app:tint="@color/black"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:visibility="gone"
+        android:id="@+id/notes"
         android:layout_height="500dp"
         android:layout_width="300dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search"
-        android:layout_marginTop="30dp">
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <ScrollView
-        android:layout_height="500dp"
-        android:layout_width="300dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search"
-        android:layout_marginTop="30dp">
-
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginBottom="10dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="20dp"
-                    android:textSize="16dp"
-                    android:text="Nom de la nota (PLACEHOLDER)"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="20dp"
-                    android:textSize="13dp"
-                    android:text="Text de la nota, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."/>
-
-                <ImageButton
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_marginLeft="268dp"
-                    android:background="@color/transparent"
-                    android:src="@drawable/baseline_more_horiz_24"
-                    app:tint="@color/black"/>
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_marginTop="30dp"
+        />
 
     <include layout="@layout/bottom_navigation_menu"/>
 
